# optmatch

./: LICENSE  OptMatch.hs  optmatch.cabal
OptMatch/: Args.hs  Matcher.hs  Util.hs
System/Console/: OptMatch.hs
System/Console/OptMatch/: Args.hs  Basic.hs  Matcher.hs  Popular.hs  Prim.hs  Types.hs  Util.hs
examples/: SumOrMax.hs
